--- a/bin/install
+++ b/bin/install
@@ -38,7 +38,7 @@ install() {
 get_arch() {
   arch=$(uname -m | tr '[:upper:]' '[:lower:]')
   case ${arch} in
-    arm64)
+    arm64|aarch64)
       echo 'arm64'
       ;;
     arm7|armv7l)
